--- a/main.html
+++ b/main.html
@@ -8,6 +8,13 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h2>What is the capital of India?</h2>
+	<label for="que"></label>
+	<input type="radio" value="New Delhi" id="que">New Delhi<br>
+	<input type="radio" value="Mumbai" id="que">Mumbai<br>
+	<blockquote cite="https://en.wikipedia.org/wiki/New_Delhi">
+		New Delhi is capital of India and administrative district of NCT Delhi.
+	</blockquote>
     <script type="text/javascript" src="./script.js">
 </script>
 
