--- a/main.html
+++ b/main.html
@@ -8,13 +8,12 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<h2>What is the capital of India?</h2>
-	<label for="que"></label>
-	<input type="radio" value="New Delhi" id="que">New Delhi<br>
-	<input type="radio" value="Mumbai" id="que">Mumbai<br>
-	<blockquote cite="https://en.wikipedia.org/wiki/New_Delhi">
-		New Delhi is capital of India and administrative district of NCT Delhi.
-	</blockquote>
+	 <p>What is the capital of India?</p>
+    <input type="radio" id="New Delhi" name="capital">
+    <label for="new delhi">New Delhi</label><br>
+    <input type="radio" id="Mumbai" name="capital">
+    <label for="mumbai">Mumbai</label><br>
+    <blockquote cite="https://en.wikipedia.org/wiki/New_Delhi">New Delhi is the capital of India and an administrative district of NCT Delhi.</blockquote>
     <script type="text/javascript" src="./script.js">
 </script>
 
